module(
  name = "prometheus",
)

bazel_dep(name = "rules_foreign_cc", version = "0.14.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
  name = "lua",
  url = "https://www.lua.org/ftp/lua-5.4.7.tar.gz",
  build_file = "lua.BUILD",
  strip_prefix = "lua-5.4.7",
  sha256 = "9fbf5e28ef86c69858f6d3d34eccc32e911c1a28b4120ff3e84aaa70cfbf1e30",
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
  name = "sol",
  downloaded_file_path = "sol.hpp",
  url = "https://github.com/ThePhD/sol2/releases/download/v3.3.0/sol.hpp",
  sha256 = "e095a961a5189863745e6c101124fce944af991f3d4726a1e82c5b4a885a187f",
)

http_file(
  name = "sol_config",
  downloaded_file_path = "config.hpp",
  url = "https://github.com/ThePhD/sol2/releases/download/v3.3.0/config.hpp",
  sha256 = "6c283673a16f0eeb3c56f8b8d72ccf7ed3f048816dbd2584ac58564c61315f02",
)